Issue #1233488 by DamienMcKenna, raiatea: z-index doesn't get set in certain circumstances.

--- a/css/menu_minipanels.css
+++ b/css/menu_minipanels.css
@@ -3,6 +3,9 @@
  * Custom CSS for the Menu_MiniPanels module.
  */
 
+div.qtip {
+  z-index: 6000;
+}
 div.menu-minipanels {
   display: none;
 }
